cabal-version: 3.0
name:          hopper-distributed
version:       0.1.0.0

-- synopsis:
-- description:
license:       BSD-3-Clause
license-file:  LICENSE
author:        Alex Biehl
maintainer:    alex@scarf.sh

-- copyright:
build-type:    Simple

-- extra-source-files:

common stuff
  build-depends:      relude
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    GADTs
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    OverloadedRecordDot

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude

common warnings
  ghc-options: -Wall -Wno-name-shadowing

library
  import:           warnings, stuff
  exposed-modules:
    Hopper.Distributed.Executor
    Hopper.Distributed.Scheduler
    Hopper.Distributed.ThriftClient
    Hopper.Distributed.ThriftServer

  -- other-modules:
  -- other-extensions:
  build-depends:
    , async
    , base               ^>=4.17.0.0
    , bytestring
    , hopper
    , hopper-thrift
    , network
    , pinch              >=0.5.0.0
    , recv
    , serialise
    , streaming-commons
    , time-manager

  hs-source-dirs:   src
  default-language: Haskell2010

executable hopper-distributed
  import:           warnings, stuff
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , async
    , base                ^>=4.17.0.0
    , hopper
    , hopper-distributed
    , random
    , stm

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:   app
  default-language: Haskell2010

test-suite hopper-distributed-test
  import:           warnings
  default-language: Haskell2010

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base                ^>=4.17.0.0
    , hopper-distributed
