cabal-version: 2.4
name:          hopper
version:       0.1.0.0

-- synopsis:
-- description:
license:       BSD-3-Clause
license-file:  LICENSE
author:        Alex Biehl
maintainer:    alex@scarf.sh

-- copyright:
build-type:    Simple

-- extra-source-files:

common stuff
  build-depends:      relude
  default-extensions:
    DerivingStrategies
    DuplicateRecordFields
    OverloadedStrings
    RecordWildCards
    OverloadedRecordDot

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude

common warnings
  ghc-options: -Wall -Wno-name-shadowing

library
  import:           warnings, stuff
  exposed-modules:
    Hopper.Scheduler
    Hopper.Scheduler.Internal

  -- other-modules:
  -- other-extensions:
  build-depends:
    , async
    , base      <5
    , psqueues
    , stm
    , vector

  hs-source-dirs:   src
  default-language: GHC2021

test-suite hopper-test
  import:           warnings
  default-language: GHC2021

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base    <5
    , hopper
